--- a/ShopProject/src/ui/styles/MainContent.css
+++ b/ShopProject/src/ui/styles/MainContent.css
@@ -121,3 +121,20 @@
 	color: #fff;
 	border: 1px solid #ff8c00;
 }
+.fadeModal {
+	background-color: black;
+    width: 100%;
+    position: absolute;
+    opacity: 0.5;
+    height: 100%;
+}
+.fadeShow {
+	top: 0;
+}
+.fadeClose {
+	top: -9999px;
+}
+.mainDiv {
+	position: relative;
+	height: 100%;
+}
