--- a/myshop/src/ui/styles/LeftContent.css
+++ b/myshop/src/ui/styles/LeftContent.css
@@ -35,6 +35,26 @@
 	list-style: none;
 	margin: 0 0 40px 0;
 }
+.main-list span,
+.main-list label {
+	font-size: 15px;
+	font-weight: bold;
+	position: absolute;
+	left: 2%;
+}
+.main-list .btn {
+	display: block;
+	margin: 0 auto;
+	margin-top: 10px;
+}
+.main-list .price {
+	margin-left: 19%;
+	width: 30%;
+	margin-bottom: 5%;
+}
+.main-list .checkbox {
+	margin-left: 5px;
+}
 .main-list li {position: relative;}
 .main-list li:before {
     /* content: url(../img/filled-circle5.png); */
@@ -108,6 +128,7 @@
 	font-size: 16px;
 	font-weight: bold;
 	padding-left: 5px;
+	cursor: pointer;
 }
 .main-aulike {
 	text-align: center;
