--- a/ShopProject/src/ui/styles/Header.css
+++ b/ShopProject/src/ui/styles/Header.css
@@ -38,14 +38,14 @@ header {
 }
 .header-phone_number { margin: -20px 20px 0 0; }
 
-.header-phone_number a {
+.header-phone_number p {
 	font-weight: bold;
 	color: #000;
 	text-decoration: none;
 	font-size: 21px;
 }
 
-.header-phone_number a:hover {
+.header-phone_number p:hover {
 	text-decoration: underline;
 }
 
@@ -53,7 +53,7 @@ header {
 	margin-top: 12px;
 }
 
-.header-phone_button a {
+.header-phone_button button {
 	background: #c32548;
 	color: #fff;
 	padding: 10px 45px;
@@ -62,7 +62,7 @@ header {
 	box-shadow: 0 0 15px 1px #d7a34d;
 }
 
-.header-phone_button a:hover {
+.header-phone_button button:hover {
 	background: #d72e54;
 	color: #fff;
 }
