add better css & fix small filter bug

--- a/ShopProject/src/ui/styles/MainContent.css
+++ b/ShopProject/src/ui/styles/MainContent.css
@@ -1,4 +1,6 @@
 /* Основной контент */
+@import '~antd/dist/antd.css';
+
 .main { position: relative; }
 .main-mashit .col-6, .main-list, .main-instagram, .main-story, .main-more, .main-aulike { background: #fff; }
 
@@ -19,18 +21,34 @@
 
 .main-mashit .col-6 {
 	text-align: center;
-	margin: 15px 0 0 0;
+	margin: 20px 0 0 0;
 	padding: 0 10px;
 	color: #1b1e21;
 	text-decoration: none !important;
-  height: 200px;
+  height: 250px;
 }
 
+.ant-card {
+  height: inherit;
+}
 .main-mashit .col-6:hover {
   transform: scale(1.1);
 	cursor: pointer;
 	text-decoration: none !important;
   color: #949391;
+}
+.ant-card-cover {
+  margin-top: 15px;
+}
+.ant-card-cover > * {
+  display: inline;
+  width: auto;
+}
+.ant-card-meta-title {
+  color: rgba(0, 0, 0, 0.85);
+  font-weight: 500;
+  font-size: 16px;
+  text-overflow: ellipsis;
 }
 
 .main-mashit .col-6 img {
@@ -55,7 +73,12 @@
 	font-size: 20px;
 	padding-top: 10px;
 }
-
+.main-mashit .col-6 p .beforeSale {
+  text-decoration: line-through;
+}
+.main-mashit .col-6 p .afterSale {
+  color: red;
+}
 .col-9 {
 	text-align: center;
 	margin-top: 20px;
