--- a/ShopProject/src/ui/styles/CallRequest.css
+++ b/ShopProject/src/ui/styles/CallRequest.css
@@ -16,3 +16,12 @@
 .modal.show {
   top: 0;
 }
+.ant-form-item {
+  margin-bottom: 10px;
+}
+.modal-footer {
+  border-top: none;
+}
+.ant-modal-footer {
+  display: none;
+}
