--- a/ShopProject/src/ui/styles/Header.css
+++ b/ShopProject/src/ui/styles/Header.css
@@ -25,9 +25,12 @@ header {
 .header-search { position: relative; }
 .header-search_body input { font-style: italic; padding-left: 15px; }
 
+.basketImg {
+  width: 75px;
+}
 .basketImg:hover {
-   transform: rotate(360deg);
-   transition-duration: 1s;
+   transform: scale(1.2);
+   transition-duration: 0.3s;
  }
 
 .header-search button {
